[package]
name = "tome"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
lazy_static = "1.5.0"
lol_html = "2.4.0"
path-clean = "1.0.1"
path-slash = "0.2.1"
pathdiff = "0.2.3"
quick-xml = { version = "0.37.5", features = ["serialize"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
urlencoding = "2.1.3"
zip = "4.0.0"
